# universal-file-converter

./: Cargo.toml  FIXING-PROCESS.md  LICENSE  PHASE-1-ARCHITECTURE.md  PROMPT.md  README.md
.github/workflows/: ci.yml  release.yml
crates/ufc-cli/: Cargo.toml
crates/ufc-cli/src/: main.rs
crates/ufc-cli/src/commands/: batch.rs  convert.rs  detect.rs  history.rs  list.rs  mod.rs
crates/ufc-core/: Cargo.toml
crates/ufc-core/src/: config.rs  detector.rs  error.rs  integrity.rs  lib.rs  orchestrator.rs  queue.rs  router.rs  state.rs  temp_manager.rs
crates/ufc-host/: Cargo.toml
crates/ufc-host/src/: lib.rs  registry.rs  sandbox.rs
crates/ufc-ir/: Cargo.toml
crates/ufc-ir/src/: archive.rs  audio.rs  document.rs  image.rs  lib.rs  mesh.rs  table.rs  traits.rs  vector.rs  video.rs
crates/ufc-plugin-api/: Cargo.toml
crates/ufc-plugin-api/src/: config.rs  error.rs  io.rs  lib.rs  progress.rs  traits.rs  types.rs
crates/ufc-tauri/: Cargo.toml  tauri.conf.json
crates/ufc-tauri/src/: commands.rs  main.rs
crates/ufc-tauri/ui/: index.html  package.json
crates/ufc-tauri/ui/src/: App.svelte
crates/ufc-tauri/ui/src/lib/components/: ConversionQueue.svelte  DropZone.svelte  FormatSelector.svelte  History.svelte  Settings.svelte
docs/: plugin-development.md
docs/adr/: 001-language-choice.md  002-wasm-sandboxing.md  003-ir-design.md
plugins/core-archive-7z/: Cargo.toml
plugins/core-archive-7z/src/: lib.rs
plugins/core-archive-tar/: Cargo.toml
plugins/core-archive-tar/src/: lib.rs
plugins/core-archive-zip/: Cargo.toml
plugins/core-archive-zip/src/: lib.rs
plugins/core-audio-aac/: Cargo.toml
plugins/core-audio-aac/src/: lib.rs
plugins/core-audio-flac/: Cargo.toml
plugins/core-audio-flac/src/: lib.rs
plugins/core-audio-mp3/: Cargo.toml
plugins/core-audio-mp3/src/: lib.rs
plugins/core-audio-opus/: Cargo.toml
plugins/core-audio-opus/src/: lib.rs
plugins/core-audio-vorbis/: Cargo.toml
plugins/core-audio-vorbis/src/: lib.rs
plugins/core-audio-wav/: Cargo.toml
plugins/core-audio-wav/src/: lib.rs
plugins/core-doc-docx/: Cargo.toml
plugins/core-doc-docx/src/: lib.rs
plugins/core-doc-html/: Cargo.toml
plugins/core-doc-html/src/: lib.rs
plugins/core-doc-markdown/: Cargo.toml
plugins/core-doc-markdown/src/: lib.rs
plugins/core-doc-pdf/: Cargo.toml
plugins/core-doc-pdf/src/: lib.rs
plugins/core-doc-rtf/: Cargo.toml
plugins/core-doc-rtf/src/: lib.rs
plugins/core-image-avif/: Cargo.toml
plugins/core-image-avif/src/: lib.rs
plugins/core-image-bmp/: Cargo.toml
plugins/core-image-bmp/src/: lib.rs
plugins/core-image-gif/: Cargo.toml
plugins/core-image-gif/src/: lib.rs
plugins/core-image-ico/: Cargo.toml
plugins/core-image-ico/src/: lib.rs
plugins/core-image-jpeg/: Cargo.toml
plugins/core-image-jpeg/src/: lib.rs
plugins/core-image-png/: Cargo.toml
plugins/core-image-png/src/: lib.rs
plugins/core-image-tiff/: Cargo.toml
plugins/core-image-tiff/src/: lib.rs
plugins/core-image-webp/: Cargo.toml
plugins/core-image-webp/src/: lib.rs
plugins/core-struct-csv/: Cargo.toml
plugins/core-struct-csv/src/: lib.rs
plugins/core-struct-json/: Cargo.toml
plugins/core-struct-json/src/: lib.rs
plugins/core-struct-xml/: Cargo.toml
plugins/core-struct-xml/src/: lib.rs
plugins/core-struct-yaml/: Cargo.toml
plugins/core-struct-yaml/src/: lib.rs
plugins/core-video-ffmpeg/: Cargo.toml
plugins/core-video-ffmpeg/src/: lib.rs
scripts/: build-plugins.sh  package-release.sh
