[package]
name = "ufc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI interface for Universal File Converter"

[[bin]]
name = "ufc"
path = "src/main.rs"

[dependencies]
ufc-plugin-api = { workspace = true }
ufc-ir = { workspace = true }
ufc-core = { workspace = true }
ufc-host = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }
