[package]
name = "ufc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core engine for Universal File Converter"

[dependencies]
ufc-plugin-api = { workspace = true }
ufc-ir = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
num_cpus = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
glob = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
