[package]
name = "ufc-plugin-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Plugin interface contract for Universal File Converter"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
