[package]
name = "ufc-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Desktop application for Universal File Converter"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ufc-plugin-api = { workspace = true }
ufc-ir = { workspace = true }
ufc-core = { workspace = true }
ufc-host = { workspace = true }
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
