[package]
name = "core-archive-tar"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TAR archive decoder/encoder plugin"
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
ufc-plugin-api = { workspace = true }
ufc-ir = { workspace = true }
serde = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
