[package]
name = "core-audio-flac"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FLAC audio decoder/encoder plugin"
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
ufc-plugin-api = { workspace = true }
ufc-ir = { workspace = true }
serde = { workspace = true }
symphonia = { workspace = true }
