[package]
name = "core-audio-mp3"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MP3 audio decoder plugin"
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
ufc-plugin-api = { workspace = true }
ufc-ir = { workspace = true }
serde = { workspace = true }
symphonia = { workspace = true }
