[package]
name = "core-audio-vorbis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OGG Vorbis audio decoder plugin"
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
ufc-plugin-api = { workspace = true }
ufc-ir = { workspace = true }
serde = { workspace = true }
symphonia = { workspace = true }
