[package]
name = "core-audio-wav"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WAV audio decoder/encoder plugin"
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
ufc-plugin-api = { workspace = true }
ufc-ir = { workspace = true }
serde = { workspace = true }
symphonia = { workspace = true }
