[package]
name = "core-doc-docx"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DOCX document decoder/encoder plugin"
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
ufc-plugin-api = { workspace = true }
ufc-ir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zip = { workspace = true }
