[package]
name = "core-doc-markdown"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Markdown document decoder/encoder plugin"
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
ufc-plugin-api = { workspace = true }
ufc-ir = { workspace = true }
serde = { workspace = true }
pulldown-cmark = { workspace = true }
