[package]
name = "core-doc-pdf"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PDF document decoder/encoder plugin"
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
ufc-plugin-api = { workspace = true }
ufc-ir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lopdf = { workspace = true }
printpdf = { workspace = true }
