[package]
name = "core-image-jpeg"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JPEG image decoder/encoder plugin"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ufc-plugin-api = { workspace = true }
ufc-ir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
