[package]
name = "core-image-png"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PNG image decoder/encoder plugin for Universal File Converter"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ufc-plugin-api = { workspace = true }
ufc-ir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
