[package]
name = "core-image-tiff"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TIFF image decoder/encoder plugin"
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
ufc-plugin-api = { workspace = true }
ufc-ir = { workspace = true }
serde = { workspace = true }
image = { workspace = true }
