[package]
name = "core-struct-yaml"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "YAML structured data decoder/encoder plugin"
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
ufc-plugin-api = { workspace = true }
ufc-ir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
